[package]
name = "gasworks"
version = "0.1.0"
authors = ["nsmryan <nsmryan@gmail.com>"]

[lib]
name="gasworks"
path="src/lib.rs"
test=true
doc=true

[dependencies]
byteorder = "1.2.6"
bytes = "0.4.10"
bit_reverse = "0.1.7"
bitreader = "0.3.1"
quicli = "0.3.0"
csv = "1.0.1"
ron = "0.4.0"
serde =  { version  =  "1", features  =  ["serde_derive"] }
nom = "4.0.0"
memmap = "0.7"
string-interner = "0.7"
flame = { version = "0.2", optional = true }
fnv = "1.0"
heapsize = "0.4.2"
crossbeam-channel = "0.2"
crossbeam="0.4"
#rayon = "1.0"
#futures = "0.1.24"
sorted-list="0.2"
revord = "0.0.2"
itertools="0.7.8"

[features]
profile = ["flame"]

